fix: display block en time para text-align right funcione
- <time> es inline por defecto, text-align no funciona
  sin display: block

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -177,6 +177,7 @@
 }
 
 .content-card__meta time {
+  display: block;
   text-align: right;
 }
 
